--- a/_layouts/website/sidenav.html
+++ b/_layouts/website/sidenav.html
@@ -1,24 +1,24 @@
 {% macro articles(_articles) %}
     {% for article in _articles %}
         {% if article.path %}
-        <a href="{{ article.path|resolveFile }}{{ article.anchor }}" class="list-group-item {% if article.path == file.path and not article.anchor %}active{% endif %}">
+        <a href="{{ article.path|resolveFile }}{{ article.anchor }}" class="list-group-item{% if article.path == file.path and not article.anchor %} active{% endif %}{% if article.articles.length > 0 %} secNav{% endif %}">
         {% elif article.url %}
         <a href="{{ article.url }}" target="_blank" class="list-group-item">
         {% else %}
         <span class="list-group-item">
         {% endif %}
 
+            {{ article.title }}
+
             {% for i in range(0, article.depth - 1) %}
             <i class="octicon octicon-chevron-down" style="opacity: 0"></i>
             {% endfor %}
 
             {% if article.articles.length > 0 and page.level.indexOf(article.level) == 0 %}
-            <i class="octicon octicon-chevron-down"></i>
+            <i class="octicon octicon-chevron-up"></i>
             {% elif article.articles.length > 0 %}
-            <i class="octicon octicon-chevron-right"></i>
+            <i class="octicon octicon-chevron-down"></i>
             {% endif %}
-
-            {{ article.title }}
 
         {% if article.path or article.url %}
         </a>
