--- a/_layouts/website/sidenav.html
+++ b/_layouts/website/sidenav.html
@@ -1,7 +1,7 @@
-{% macro articles(_articles) %}
+<!--{% macro articles(_articles) %}
     {% for article in _articles %}
         {% if article.path %}
-        <a href="{{ article.path|resolveFile }}{{ article.anchor }}" class="list-group-item{% if article.path == file.path and not article.anchor %} active{% endif %}{% if article.articles.length > 0 %} secNav{% endif %}">
+        <a href="{{ article.path|resolveFile }}{{ article.anchor }}" class="list-group-item{% if article.path == file.path and not article.anchor %} active{% endif %}{% if article.articles.length > 0 %} secNav{% endif %}" data-level="{{ article.level }}">
         {% elif article.url %}
         <a href="{{ article.url }}" target="_blank" class="list-group-item">
         {% else %}
@@ -26,11 +26,59 @@
         </span>
         {% endif %}
 
-        {% if article.articles.length > 0 and page.level.indexOf(article.level) == 0 %}
-        {{ articles(article.articles) }}
-        {% endif %}
+    {% endfor %}
+{% endmacro %}-->
+
+
+
+{% macro articles(_articles) %}
+    {% for article in _articles %}
+        <li class="list-group-item {% if article.path == file.path and not article.anchor %}active{% endif %}" data-level="{{ article.level }}" {% if article.path %}data-path="{{ article.path|resolveFile }}"{% endif %}>
+            {% if article.path and getPageByPath(article.path) %}
+                <a href="{{ article.path|resolveFile }}{{ article.anchor }}">
+            {% elif article.url %}
+                <a target="_blank" href="{{ article.url }}">
+            {% else %}
+                <span>
+            {% endif %}
+
+            {% if article.level != "0" and config.pluginsConfig['theme-default'].showLevel %}
+                <b>{{ article.level }}.</b>
+            {% endif %}
+
+            {{ article.title }}
+
+            {% for i in range(0, article.depth - 1) %}
+            <i class="octicon octicon-chevron-down" style="opacity: 0"></i>
+            {% endfor %}
+
+            {% if article.articles.length > 0 and page.level.indexOf(article.level) == 0 %}
+            <i class="octicon octicon-chevron-up"></i>
+            {% elif article.articles.length > 0 %}
+            <i class="octicon octicon-chevron-down"></i>
+            {% endif %}
+
+
+            {% if article.path  or article.url %}
+                </a>
+            {% else %}
+                </span>
+            {% endif %}
+
+            {% if article.articles.length > 0 and page.level.indexOf(article.level) == 0 %}
+            <div class="articles">
+                {{ articles(article.articles, file, config) }}
+            </div>
+            {% endif %}
+        </li>
     {% endfor %}
 {% endmacro %}
+
+
+
+
+
+
 
 {% block book_summary %}
     {% for part in summary.parts %}
@@ -41,9 +89,9 @@
         </div>
         {% endif %}
 
-        <div class="list-group">
+        <ul class="list-group">
             {{ articles(part.articles) }}
-        </div>
+        </ul>
     </div>
     {% endfor %}
 {% endblock %}
