--- a/_layouts/website/sidenav.html
+++ b/_layouts/website/sidenav.html
@@ -89,6 +89,7 @@
         </div>
         {% endif %}
 
+        <div class="panel-title"></div>
         <ul class="list-group">
             {{ articles(part.articles) }}
         </ul>
