--- a/src/less/header.less
+++ b/src/less/header.less
@@ -1,18 +1,13 @@
-
-.page-custom-header
-{
-    height: 90px;
-    margin-bottom: 15px;
+.gb-page-header {
     box-shadow: 0 1px 1px rgba(0, 0, 0, .1);
+    padding: 25px 0 21px;
 }
 
-.logo
-{
+.logo {
     display: inline-block;
     overflow: hidden;
     width: 124px;
     height: 38px;
-    margin: 24px 0 0 20px;
     text-indent: -999em;
     background: url(//fe.ksyun.com/web/logo.png) no-repeat;
 }
