--- a/src/less/book.less
+++ b/src/less/book.less
@@ -1,3 +1,7 @@
+body,html {
+    font-family: "Microsoft YaHei","Helvetica Neue",Helvetica,Arial,sans-serif;
+}
+
 .pdflink {
     color: #006cff;
     position: absolute;
@@ -9,6 +13,15 @@
     border: 0 none;
 }
 
+.panel-title {
+    background-color: #f5f6f7;
+    height: 46px;
+    line-height: 46px;
+    padding-left: 24px;
+    font-size: 16px;
+    color: #333;
+    border-bottom: 1px solid #dbe2e6;
+}
 .gb-markdown ol, .gb-markdown ul {
     margin-left: -8px;
 }
@@ -27,7 +40,7 @@
         height: 40px;
         display: block;
         line-height: 40px;
-        padding: 0 15px;
+        padding: 0 12px 0 24px;
     }
     &.active {
         background-color: transparent;
@@ -40,6 +53,7 @@
             border-left: 2px solid #fe4444 !important;
             color: #fe4444;
             font-weight: normal;
+            padding-left: 22px;
         }
     }
     &.active-level {
@@ -58,7 +72,7 @@
             font-size: 12px;
             height: 36px;
             line-height: 36px;
-            padding-left: 24px;
+            padding-left: 36px;
             &.active {
                 background-color: transparent;
                 border: 0 none !important;
