表格优化，宽度超出屏幕宽度动态增加横向滚动条

--- a/_layouts/website/footer.html
+++ b/_layouts/website/footer.html
@@ -316,7 +316,7 @@
 
         crumbsNodes.push({
             text: title,
-            url: homeUrl 
+            url: homeUrl
         })
 
         for (var i = crumbsNodes.length - 1; i >= 0; i--) {
@@ -343,4 +343,15 @@
 
         return a;
     }
+
+    //表格动态增加父级div，表头不换行
+    [].slice.call(document.querySelectorAll('table')).forEach(function(el) {
+        var wrapper = document.createElement('div');
+        wrapper.className = 'table-area';
+        el.parentNode.insertBefore(wrapper, el);
+        el.parentNode.removeChild(el);
+        wrapper.appendChild(el);
+    })
+
+
 </script>
