--- a/src/less/book.less
+++ b/src/less/book.less
@@ -106,7 +106,16 @@ body,html {
         font-size: 24px;
     }
 }
-
+.table-area {
+    overflow-x: auto;
+    margin-bottom: 15px;
+}
+.gb-markdown table {
+    margin-bottom: 0;
+}
 .gb-markdown table th {
     background-color: #f5f6f7;
+    white-space: nowrap;    
 }
+
+
