--- a/src/less/book.less
+++ b/src/less/book.less
@@ -104,6 +104,20 @@ body,html {
     }
     h1 {
         font-size: 24px;
+        margin-bottom: 30px;
+    }
+    h2 , h3 {
+        font-size: 16px;
+        margin-bottom: 12px;
+    }
+    p {
+        margin-bottom: 30px;
+        + ol,  + ul {
+            margin-top: -20px;
+        }
+    }
+    img {
+        margin: 20px 0;
     }
 }
 .table-area {
