页脚链接更新

--- a/_layouts/website/footer.html
+++ b/_layouts/website/footer.html
@@ -10,19 +10,19 @@
                     <a href="//www.ksyun.com/proservice/database">关系型数据库</a>
                 </li>
                 <li>
-                    <a href="#">开放型存储</a>
+                    <a href="//www.ksyun.com/proservice/storage_service">开放型存储</a>
                 </li>
                 <li>
-                    <a href="#">内容分发网络</a>
+                    <a href="//www.ksyun.com/proservice/cdn">内容分发网络</a>
                 </li>
                 <li>
-                    <a href="#">负载均衡</a>
+                    <a href="//www.ksyun.com/proservice/loadbalance">负载均衡</a>
                 </li>
                 <li>
-                    <a href="#">缓存服务</a>
+                    <a href="//www.ksyun.com/proservice/cache_server">缓存服务</a>
                 </li>
                 <li>
-                    <a href="#">云物理主机</a>
+                    <a href="//www.ksyun.com/proservice/physical_master">云物理主机</a>
                 </li>
             </ul>
         </div>
@@ -30,25 +30,22 @@
             <h4 class="title">热门问题</h4>
             <ul class="content">
                 <li>
-                    <a href="#">注册账号</a>
+                    <a href="//www.ksyun.com/doc/art/id/155">注册认证</a>
                 </li>
                 <li>
-                    <a href="#">产品购买</a>
+                    <a href="//www.ksyun.com/doc/art/id/159">账户充值</a>
                 </li>
                 <li>
-                    <a href="#">产品开通</a>
+                    <a href="//www.ksyun.com/doc/art/id/154">产品购买</a>
                 </li>
                 <li>
-                    <a href="#">云服务价格</a>
+                    <a href="//www.ksyun.com/doc/art/id/299">备案流程</a>
                 </li>
                 <li>
-                    <a href="#">备案介绍</a>
+                    <a href="//www.ksyun.com/sys/common_err">客服说明</a>
                 </li>
                 <li>
-                    <a href="#">API文档</a>
-                </li>
-                <li>
-                    <a href="#">售后服务</a>
+                    <a href="//www.ksyun.com/doc/cat/id/576">服务协议</a>
                 </li>
             </ul>
         </div>
@@ -56,16 +53,16 @@
             <h4 class="title">快速入口</h4>
             <ul class="content">
                 <li>
-                    <a href="#">控制台</a>
+                    <a href="//www.ksyun.com/user/login?result=-107&callback=http%3A%2F%2Fwww.ksyun.com%2Fconsole%2Findex">控制台</a>
                 </li>
                 <li>
-                    <a href="#">个人中心</a>
+                    <a href="//www.ksyun.com/user/login?callback=http%3A%2F%2Fwww.ksyun.com%2Fucenter%2Finfo">个人中心</a>
                 </li>
                 <li>
-                    <a href="#">帮助中心</a>
+                    <a href="//www.ksyun.com/doc/index">帮助中心</a>
                 </li>
                 <li>
-                    <a href="#">备案</a>
+                    <a href="//www.ksyun.com/beian/flowchart">备案</a>
                 </li>
             </ul>
         </div>
@@ -73,19 +70,19 @@
             <h4 class="title">关于我们</h4>
             <ul class="content">
                 <li>
-                    <a href="#">公司介绍</a>
+                    <a href="//www.ksyun.com/about/aboutus">公司介绍</a>
                 </li>
                 <li>
-                    <a href="#">新闻动态</a>
+                    <a href="//www.ksyun.com/news/information">新闻动态</a>
                 </li>
                 <li>
-                    <a href="#">加入我们</a>
+                    <a href="//ksyun.hirede.com/CareerSite/EmployerBasic">加入我们</a>
                 </li>
                 <li>
-                    <a href="#">合作伙伴</a>
+                    <a href="//www.ksyun.com/about/aboutcooperatec">合作伙伴</a>
                 </li>
                 <li>
-                    <a href="#">友情链接</a>
+                    <a href="//www.ksyun.com/about/aboutcolink">友情链接</a>
                 </li>
             </ul>
         </div>
@@ -352,6 +349,4 @@
         el.parentNode.removeChild(el);
         wrapper.appendChild(el);
     })
-
-
 </script>
