--- a/src/less/book.less
+++ b/src/less/book.less
@@ -156,3 +156,10 @@ html {
     color: rgb(151, 151, 151);
     cursor: pointer;
 }
+
+.articles {
+    display: none;
+}
+.list-group-item.active .articles , .list-group-item.active-level .articles {
+    display: block;
+}
