--- a/_layouts/website/sidenav.html
+++ b/_layouts/website/sidenav.html
@@ -42,23 +42,14 @@
                 <span>
             {% endif %}
 
-            {% if article.level != "0" and config.pluginsConfig['theme-default'].showLevel %}
-                <b>{{ article.level }}.</b>
-            {% endif %}
-
             {{ article.title }}
 
-            {% for i in range(0, article.depth - 1) %}
-            <i class="octicon octicon-chevron-down" style="opacity: 0"></i>
-            {% endfor %}
-
             {% if article.articles.length > 0 and page.level.indexOf(article.level) == 0 %}
-            <i class="octicon octicon-chevron-up"></i>
+            <i class="arrow arrow-up"></i>
             {% elif article.articles.length > 0 %}
-            <i class="octicon octicon-chevron-down"></i>
+            <i class="arrow arrow-down"></i>
             {% endif %}
-
-
+           
             {% if article.path  or article.url %}
                 </a>
             {% else %}
