--- a/_layouts/website/page.html
+++ b/_layouts/website/page.html
@@ -19,8 +19,8 @@
     <header class="gb-page-header">
         <div class="container">
         {% block header %}
-            <a href="//www.ksyun.com" class="logo">金山云</a>
-       {% endblock %}
+            <a href="//www.ksyun.com" class="logo">金山云</a><h6 class="page-title">文档中心</h6>
+        {% endblock %}
         </div>
     </header>
 
