--- a/src/less/header.less
+++ b/src/less/header.less
@@ -10,4 +10,10 @@
     height: 38px;
     text-indent: -999em;
     background: url(//fe.ksyun.com/web/logo.png) no-repeat;
+    vertical-align: -10px;
+}
+.page-title {
+    display: inline-block;
+    font-size: 24px;
+    margin: 0 0 0 20px;
 }
