--- a/_layouts/website/crumb.html
+++ b/_layouts/website/crumb.html
@@ -9,6 +9,6 @@
 
 {% block book_summary %}
     {% for part in summary.parts %}
-        <div class="crumbs-inner"><div class="crumbs"><a href="//docs.ksyun.com">文档中心</a> {{ articles(part.articles) }}</div><a class="pdflink">下载PDF文档</a></div
+        <div class="crumbs-inner"><div class="crumbs">文档中心 &lt; <a class="crumbs-parent"></a>{{ articles(part.articles) }}</div><a class="pdflink">下载PDF文档</a></div
     {% endfor %}
 {% endblock %}
