--- a/_layouts/website/page.html
+++ b/_layouts/website/page.html
@@ -35,7 +35,7 @@
                         {% block search_results %}
                             {% block page %}
                             <div class="gb-markdown book-page-inner">
-                                <div class="crumbs-inner"><div class="crumbs">文档中心 &gt; <a class="crumbs-parent"></a> </div><a class="pdflink">下载PDF文档</a></div>
+                                <div class="crumbs-inner"><div class="crumbs"><a href="//docs.ksyun.com">文档中心</a> &gt; <a class="crumbs-parent"></a> </div><a class="pdflink">下载PDF文档</a></div>
                                 {{ page.content|safe }}
                             </div>
                             {% endblock %}
