--- a/_layouts/website/footer.html
+++ b/_layouts/website/footer.html
@@ -106,8 +106,8 @@
     <div class="ks-footer-bottom">
         <div class="ks-copyright">
             ©北京金山云网络技术有限公司 2016 Ksyun All Rights Reserved Kingsoft Corp.&nbsp;&nbsp;&nbsp;&nbsp;京ICP证120829号&nbsp;&nbsp;&nbsp;&nbsp;
-            <a href="#">京ICP备12032080号-2</a> &nbsp;&nbsp;&nbsp;&nbsp;
-            <a href="#">京公网安备 11010802020326号</a>
+            <a href="http://www.miitbeian.gov.cn/">京ICP备12032080号-2</a> &nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=11010802020326">京公网安备 11010802020326号</a>
         </div>
     </div>
 </div>
