页脚增加 京网文 备案号

--- a/_layouts/website/footer.html
+++ b/_layouts/website/footer.html
@@ -54,7 +54,6 @@
             <ul class="content">
                 <li>
                     <a href="//www.ksyun.com/user/login?result=-107&callback=http%3A%2F%2Fwww.ksyun.com%2Fconsole%2Findex">控制台</a>
-
                 </li>
                 <li>
                     <a href="//www.ksyun.com/user/login?callback=http%3A%2F%2Fwww.ksyun.com%2Fucenter%2Finfo">个人中心</a>
@@ -105,13 +104,14 @@
     </div>
     <div class="ks-footer-bottom">
         <div class="ks-copyright">
-            ©北京金山云网络技术有限公司 2016 Ksyun All Rights Reserved Kingsoft Corp.&nbsp;&nbsp;&nbsp;&nbsp;京ICP证120829号&nbsp;&nbsp;&nbsp;&nbsp;
-            <a href="http://www.miitbeian.gov.cn/">京ICP备12032080号-2</a> &nbsp;&nbsp;&nbsp;&nbsp;
-            <a href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=11010802020326">京公网安备 11010802020326号</a>
+            <p class="copyright">&copy;北京金山云网络技术有限公司 2016 Ksyun All Rights Reserved Kingsoft Corp. </p>
+            <p>京ICP证120829号
+                <a href="http://www.miitbeian.gov.cn/">京ICP备12032080号-2</a> 京网文（2014）0901-201号
+                <a href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=11010802020326">京公网安备 11010802020326号</a>
+            </p>
         </div>
     </div>
 </div>
-
 <script>
     // matches polyfill
     this.Element && function(ElementPrototype) {
