--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -141,16 +141,17 @@
 
 .ks-copyright {
     text-align: center;
-    line-height: 81px;
     margin: 0 auto;
     border-top: 1px solid #444;
     font-size: 12px;
     color: #666;
+    padding: 20px 0;
 }
 
 .ks-copyright a {
     text-decoration: none;
     color: #666;
+    margin: 0 20px;
 }
 
 .ks-copyright a:hover {
